--- a/index.html
+++ b/index.html
@@ -6,22 +6,34 @@
   <title>Jan Arroyo</title>
   <link href="styles.css" rel="stylesheet" />
 
-  <!-- Scoped styles: Spotlight + theme switch + smooth transitions -->
+  <!-- Local styles (scoped) for spotlight + theme switch + smooth transitions -->
   <style>
-    /* ---------- Smooth theme transitions (no layout jitter) ---------- */
-    html, body, .nav, .btn, .btn-primary,
-    .spot-card, .spot-body, .hero-right img, footer, .theme-switch .label {
+    /* Smooth theme transitions */
+    html, body, .nav, .btn, .btn-primary, .spot-card, .spot-body,
+    .hero-right img, .theme-switch .label, footer {
       transition: background-color .25s ease, color .25s ease,
-                  border-color .25s ease, box-shadow .25s ease;
+                  border-color .25s ease, box-shadow .25s ease, opacity .25s ease;
     }
     @media (prefers-reduced-motion: reduce){
-      html, body, .nav, .btn, .btn-primary,
-      .spot-card, .spot-body, .hero-right img, footer, .theme-switch .label {
-        transition: none !important;
-      }
+      html, body, .nav, .btn, .btn-primary, .spot-card, .spot-body,
+      .hero-right img, .theme-switch .label, footer { transition: none !important; }
     }
 
-    /* ---------- Project Spotlight (unchanged behavior) ---------- */
+    /* Typing line (keeps your vibe) */
+    .typing-wrap{ display:flex; gap:6px; align-items:center; margin-top:6px; color:var(--muted); }
+    .typing-line{ font-family: ui-monospace, SFMono-Regular, Menlo, monospace; white-space:nowrap; }
+    .caret{ display:inline-block; width:10px; height:1.1em; margin-left:2px; background: currentColor; animation: blink 1s step-end infinite; vertical-align: text-bottom; }
+    @keyframes blink{ 50%{ opacity:0; } }
+
+    /* Rotating hero photo (fade between sources) */
+    .hero-right { position: relative; }
+    .hero-right .rot-img{
+      width:100%; height:auto; border-radius:22px; border:1px solid var(--bd); box-shadow:var(--shadow-soft);
+      position:absolute; inset:0; object-fit:cover; opacity:0;
+    }
+    .hero-right .rot-img.active{ opacity:1; position:relative; }
+
+    /* Spotlight row */
     .spotlight { width:min(1200px,96vw); margin:40px auto 6px; }
     .spotlight h2 { font-size:28px; margin:0 0 16px; letter-spacing:.2px; }
     .spotlight-wrap { position:relative; }
@@ -44,10 +56,6 @@
     .spot-card:hover{ transform:translateY(-2px); box-shadow:var(--shadow); border-color:var(--bd-strong); }
     .spot-media{ background:#0f172a; display:grid; place-items:center; overflow:hidden; }
     .spot-media img{ width:100%; height:100%; object-fit:cover; display:block; }
-    .spot-fallback{
-      display:grid; place-items:center; color:#e5e7eb; font-weight:800; font-size:18px;
-      background:linear-gradient(135deg,#111827,#1f2937);
-    }
     .spot-body{ padding:18px; background:var(--card-grad); }
     .spot-title{ font-weight:800; font-size:20px; margin:0 0 8px; }
     .spot-desc{ margin:0; color:var(--muted); line-height:1.55; }
@@ -61,7 +69,7 @@
     .spot-left{ left:-4px; } .spot-right{ right:-4px; }
     @media (max-width:780px){ .spot-left,.spot-right{ display:none; } }
 
-    /* ---------- Footer theme switch (pill slider) ---------- */
+    /* Footer theme switch (pill slider) */
     .theme-switch{
       width:min(1200px,96vw);
       margin:32px auto 0;
@@ -71,9 +79,7 @@
       font-size:14px; color:var(--muted); user-select:none;
       display:inline-flex; align-items:center; gap:8px;
     }
-    .switch{
-      position:relative; width:56px; height:30px; cursor:pointer; display:inline-block;
-    }
+    .switch{ position:relative; width:56px; height:30px; cursor:pointer; display:inline-block; }
     .switch input{ position:absolute; width:0; height:0; opacity:0; }
     .slider{
       position:absolute; inset:0;
@@ -88,10 +94,18 @@
       box-shadow: 0 1px 2px rgba(0,0,0,.15);
     }
     .switch input:checked + .slider::after{ transform: translateX(26px); }
+
+    /* Spotify card */
+    .spotify-wrap{ width:min(1200px,96vw); margin:24px auto 0; }
+    .spotify-card{
+      border-radius:18px; border:1px solid var(--bd); background:var(--panel);
+      box-shadow:var(--shadow-soft); padding:8px;
+    }
+    .spotify-card iframe{ width:100%; height:152px; border:0; border-radius:12px; display:block; }
   </style>
 </head>
 <body>
-  <!-- Nav (unchanged) -->
+  <!-- Nav (your structure) -->
   <nav class="nav">
     <div class="narrow nav-inner">
       <a class="brand" href="./index.html">JAN</a>
@@ -106,24 +120,35 @@
   </nav>
 
   <main class="page">
-    <!-- Hero (your existing structure) -->
+    <!-- Hero -->
     <section class="hero-split">
       <div class="hero-left">
         <div class="hello">cout &lt;&lt; "hello world";</div>
         <h1>I’m <span class="brand-accent">Jan Arroyo</span></h1>
-        <p class="sub">a PM trying — TPM / APM · I like clean specs and useful products.</p>
-        <div class="cta-row">
+
+        <!-- Typing line (editable phrases below in JS) -->
+        <div class="typing-wrap">
+          <span class="typing-line" id="typing">a PM trying</span>
+          <span class="caret" aria-hidden="true"></span>
+        </div>
+
+        <div class="cta-row" style="margin-top:10px;">
           <a class="cta btn-primary" href="work.html">See my work</a>
           <a class="cta btn" href="mailto:janarroy@usc.edu">Email</a>
           <a class="cta btn" href="Jan_Arroyo_Resume.pdf" target="_blank" rel="noopener">Résumé</a>
         </div>
       </div>
+
+      <!-- Rotating hero photo -->
       <div class="hero-right">
-        <img src="images/Hawaii.jpg" alt="Jan at the beach" width="800" height="1040" />
+        <!-- Provide 2–5 images here; first one is visible on load -->
+        <img class="rot-img active" src="images/Hawaii.jpg" alt="Jan at the beach" width="800" height="1040" />
+        <img class="rot-img" src="images/headshot.JPG" alt="Jan headshot" width="800" height="1040" />
+        <img class="rot-img" src="images/Marshall.JPG" alt="USC Marshall" width="800" height="1040" />
       </div>
     </section>
 
-    <!-- ===== Project Spotlight (links to your real Work panels) ===== -->
+    <!-- Project Spotlight -->
     <section class="spotlight" aria-label="Project Spotlight">
       <h2>Project Spotlight</h2>
       <div class="spotlight-wrap">
@@ -132,9 +157,11 @@
         </button>
 
         <div class="spot-row" id="spotRow">
-          <!-- Adjust these to match your actual panels (already added) -->
+          <!-- Use the same preview images you show inside work.html panels -->
           <a class="spot-card" href="work.html#quokka">
-            <div class="spot-media spot-fallback"><span>Quokka Brew</span></div>
+            <div class="spot-media">
+              <img src="Projects/Quokka1.jpg" alt="Quokka Brew preview" loading="lazy" />
+            </div>
             <div class="spot-body">
               <div class="spot-title">Quokka Brew — Design Research</div>
               <p class="spot-desc">60+ interviews and iterative can designs that improved shelf recognition.</p>
@@ -142,7 +169,9 @@
           </a>
 
           <a class="spot-card" href="work.html#clear-clinical">
-            <div class="spot-media spot-fallback"><span>Clear Clinical</span></div>
+            <div class="spot-media">
+              <img src="Projects/ClearClinical1.jpg" alt="Clear Clinical preview" loading="lazy" />
+            </div>
             <div class="spot-body">
               <div class="spot-title">Clear Clinical — Strategy &amp; UX</div>
               <p class="spot-desc">Merged mid + final decks: research synthesis, roadmap, and proposals.</p>
@@ -151,7 +180,7 @@
 
           <a class="spot-card" href="work.html#ey-workshop">
             <div class="spot-media">
-              <img src="Projects/EY1.jpg" alt="EY workshop" loading="lazy" width="480" height="300" />
+              <img src="Projects/EY1.jpg" alt="EY Workshop preview" loading="lazy" />
             </div>
             <div class="spot-body">
               <div class="spot-title">EY Workshop — Design Thinking</div>
@@ -161,7 +190,7 @@
 
           <a class="spot-card" href="work.html#advocacy-day">
             <div class="spot-media">
-              <img src="Projects/Partnership_Advocacy_Day1.jpg" alt="Policy Advocacy Day" loading="lazy" width="480" height="300" />
+              <img src="Projects/Partnership_Advocacy_Day1.jpg" alt="Policy Advocacy Day preview" loading="lazy" />
             </div>
             <div class="spot-body">
               <div class="spot-title">Policy Advocacy Day — Sacramento</div>
@@ -171,7 +200,7 @@
 
           <a class="spot-card" href="work.html#magazine">
             <div class="spot-media">
-              <img src="Projects/Magazine1.jpg" alt="Magazine feature" loading="lazy" width="480" height="300" />
+              <img src="Projects/Magazine1.jpg" alt="Magazine preview" loading="lazy" />
             </div>
             <div class="spot-body">
               <div class="spot-title">Magazine Feature</div>
@@ -185,9 +214,21 @@
         </button>
       </div>
     </section>
+
+    <!-- Spotify (restored) -->
+    <section class="spotify-wrap">
+      <div class="spotify-card">
+        <!-- Replace with your playlist URI if different -->
+        <iframe style="border-radius:12px"
+          src="https://open.spotify.com/embed/playlist/37i9dQZF1DX4WYpdgoIcn6?utm_source=generator"
+          loading="lazy" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+        </iframe>
+      </div>
+    </section>
+
   </main>
 
-  <!-- Footer with centered theme switch -->
+  <!-- Centered theme switch -->
   <div class="theme-switch" role="group" aria-label="Color Theme">
     <span class="label"><span id="modeWord">Light</span> Mode</span>
     <label class="switch" aria-label="Toggle color theme">
@@ -209,7 +250,41 @@
     document.getElementById('spotLeft').addEventListener('click', ()=> spotRow.scrollBy({left: -spotRow.clientWidth*0.9, behavior:'smooth'}));
     document.getElementById('spotRight').addEventListener('click', ()=> spotRow.scrollBy({left:  spotRow.clientWidth*0.9, behavior:'smooth'}));
 
-    // Theme init + sync to pill switch
+    // Typing line — edit phrases here
+    const phrases = [
+      'a PM trying',
+      'TPM / APM — I like clean specs and useful products',
+      'shipping with kind teams'
+    ];
+    const typingEl = document.getElementById('typing');
+    let p = 0, pos = 0, dir = 1;
+    function typeLoop(){
+      const text = phrases[p];
+      pos += dir;
+      typingEl.textContent = text.slice(0, pos);
+      if (dir > 0 && pos === text.length){
+        dir = -1; // delete
+        setTimeout(typeLoop, 1200);
+      } else if (dir < 0 && pos === 0){
+        dir = 1; // next
+        p = (p + 1) % phrases.length;
+        setTimeout(typeLoop, 280);
+      } else {
+        setTimeout(typeLoop, dir > 0 ? 34 : 18);
+      }
+    }
+    typeLoop();
+
+    // Rotating hero photo (cross-fade)
+    const imgs = Array.from(document.querySelectorAll('.hero-right .rot-img'));
+    let i = 0;
+    setInterval(()=>{
+      imgs[i].classList.remove('active');
+      i = (i + 1) % imgs.length;
+      imgs[i].classList.add('active');
+    }, 4200);
+
+    // Theme init + pill switch
     const root = document.documentElement;
     const chk  = document.getElementById('themeChk');
     const word = document.getElementById('modeWord');
@@ -223,23 +298,17 @@
         word.textContent = isDark ? 'Dark' : 'Light';
       }
     }
-
     (function initTheme(){
       const saved = localStorage.getItem('jan_theme');
       const systemDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
       const mode = saved || (systemDark ? 'dark' : 'light');
       applyTheme(mode, {persist:false});
     })();
+    chk.addEventListener('change', () => applyTheme(chk.checked ? 'dark' : 'light'));
 
-    chk.addEventListener('change', () => {
-      applyTheme(chk.checked ? 'dark' : 'light');
-    });
-
-    // Keep in sync if OS theme changes (optional)
     if (window.matchMedia){
       const mql = window.matchMedia('(prefers-color-scheme: dark)');
       mql.addEventListener?.('change', e => {
-        // Only auto-switch if user hasn't made an explicit choice
         if (!localStorage.getItem('jan_theme')){
           applyTheme(e.matches ? 'dark' : 'light');
         }
