--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <!-- Rotating hero photo -->
       <div class="hero-right">
         <!-- Provide 2–5 images here; first one is visible on load -->
-        <img class="rot-img active" src="images/Hawaii.jpg" alt="Jan at the beach" width="800" height="1040" />
+        <img class="rot-img active" src="images/Hawaii.JPG" alt="Jan at the beach" width="800" height="1040" />
         <img class="rot-img" src="images/headshot.JPG" alt="Jan headshot" width="800" height="1040" />
         <img class="rot-img" src="images/Marshall.JPG" alt="USC Marshall" width="800" height="1040" />
       </div>
